BookとAuthorのMVCを作成

--- a/MyLibrary/MyLibrary/appsettings.json
+++ b/MyLibrary/MyLibrary/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyLibraryContext": "Server=(localdb)\\mssqllocaldb;Database=MyLibraryContext-d32aa21c-f0dd-4ada-ab29-8ff8f92df17f;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
