出版レーベルの登録モーダル

--- a/MyLibraryRazor/MyLibraryRazor/appsettings.json
+++ b/MyLibraryRazor/MyLibraryRazor/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyLibraryRazorContext": "Server=(localdb)\\mssqllocaldb;Database=MyLibraryRazorContext-ac9c8957-c4ff-45fd-994b-db34acde3df3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyLibraryRazorContext":
+    "Server=(localdb)\\mssqllocaldb;Database=MyLibraryRazorContext-ac9c8957-c4ff-45fd-994b-db34acde3df3;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
